--- a/templates/result.html
+++ b/templates/result.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
         <title>Calculator</title>
     </head>
     <body>
